--- a/styles.css
+++ b/styles.css
@@ -54,13 +54,16 @@
     .riw-footer-col {
       display: inline !important;
       margin-right: 1rem !important;
-      width: 0;
-      flex-shrink: 5;
+      left: -1em;
     }
 
     .riw-footer-row {
       position: relative;
       left: 30%;
+    }
+
+    p.riw-footer-row {
+      left: 41%;
     }
 
     .school-logo p {
@@ -391,7 +394,8 @@
     }
 
     .product-body {
-      width: 80%;
+      left: 13rem;
+      width: 65%;
       margin-bottom: 0;
     }
 
@@ -622,6 +626,11 @@
       left: 30.5%;
       max-width: 15rem;
       margin: 0 15rem;
+    }
+
+    /* properly center more resources title */
+    .resources {
+      left: 27%;
     }
 
     /*cards*/
