--- a/styles.css
+++ b/styles.css
@@ -238,6 +238,10 @@
       text-align: center;
     }
 
+    h3 {
+      text-align: center;
+    }
+
     .riw-jumbotron {
       width: 98.9vw !important;
     }
@@ -616,18 +620,18 @@
       top: 15rem;
     }
 
-    /* small titles */
+    /* Align h3 titles */
     .titles-sm {
       display: inline;
       position: relative;
-      left: 24%;
+      left: 25%;
       max-width: 15rem;
       margin: 0 15rem;
     }
 
     /* properly center more resources title */
     .resources {
-      left: 28%;
+      left: 10em !important;
     }
 
     /*cards*/
@@ -849,10 +853,7 @@
         height: auto;
       }
 
-      .titles-sm {
-        left: 26%;
 
-      }
 
       /* Course Cards on Landing Pages */
 
@@ -1156,8 +1157,10 @@
 
     }
 
-    @media only screen and (min-width: 1326px) {
+    @media only screen and (min-width: 1340px) {
+
+      /* Align h3 titles on bigger screens */
       .titles-sm {
-        left: 32%;
+        left: 30%;
       }
     }
