--- a/styles.css
+++ b/styles.css
@@ -646,7 +646,7 @@
     .riw-card-deck {
       display: flex;
       flex-flow: row wrap;
-      margin: 0 -2.5rem;
+      margin: 0 -28em;
     }
 
     .riw-card-deck .riw-card {
@@ -846,13 +846,6 @@
         margin-top: 0;
 
       }
-
-      .responsive {
-        width: 100%;
-        height: auto;
-      }
-
-
 
       /* Course Cards on Landing Pages */
 
@@ -1110,11 +1103,6 @@
 
       .riw-card {
         cursor: default;
-      }
-
-      .riw-card-deck {
-        display: flex;
-        flex-flow: row wrap;
       }
 
       .riw-card-deck .riw-card {
