Remove redundant classes

--- a/styles.css
+++ b/styles.css
@@ -460,95 +460,7 @@
       border: 1px solid #000;
       border-radius: 5px;
       transition: 0.3s;
-    }
-
-    .tapestry-container:hover {
-      box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
-    }
-
-    .tapestry-container img {
-      position: absolute;
-      top: 0.15rem;
-      max-width: 100%;
-      min-height: 10rem;
-      object-fit: cover;
-    }
-
-    h3.tapestry-paragraph {
-      position: absolute;
-      padding-left: 0.75rem;
-      top: 10rem;
-    }
-
-    p.tapestry-paragraph {
-      position: absolute;
-      padding-left: 0.75rem;
-      top: 12.25rem;
-    }
-
-    .tapestry-paragraph .event-link {
-      position: absolute;
-      padding-left: 0.75rem;
-      top: 15rem;
-    }
-
-
-    /* Placemat */
-    .placemat-container {
-      min-width: 22em;
-      min-height: 19rem;
-      position: relative;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, 20%);
-      margin-bottom: 1rem;
-      border: 1px solid #000;
-      border-radius: 5px;
-      transition: 0.3s;
-    }
-
-    .placemat-container:hover {
-      box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
-    }
-
-    .placemat-container img {
-      position: absolute;
-      max-width: 100%;
-      min-height: 10rem;
-      object-fit: cover;
-    }
-
-
-    .placemat-container h3 {
-      position: absolute;
-      padding-left: 0.75rem;
-      top: 10rem;
-    }
-
-    .placemat-container p {
-      position: absolute;
-      padding-left: 0.75rem;
-      top: 12.25rem;
-    }
-
-    .placemat-container a.event-link {
-      position: absolute;
-      padding-left: 0.75rem;
-      top: 15rem;
-    }
-
-    /* Tapestry*/
-    .tapestry-container {
-      width: 22em;
-      height: 19rem;
-      position: relative;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, 20%);
-      margin-bottom: 1rem;
-      border: 1px solid #000;
-      border-radius: 5px;
-      transition: 0.3s;
+      margin: 0 0 7rem 0;
     }
 
     .tapestry-container:hover {
@@ -1019,7 +931,6 @@
         left: 50%;
         top: 50%;
         transform: translate(-50%, 20%);
-        margin-bottom: 1rem;
         border: 1px solid #000;
         border-radius: 5px;
         transition: 0.3s;
