--- a/styles.css
+++ b/styles.css
@@ -225,24 +225,10 @@
     * Add these for RIW moodle layout 
     */
 
-    h2.product-content {
-      left: 1rem;
-      text-align: center;
-    }
-
-    .h3 {
-      text-align: center;
-    }
-
-    /* 
-  * Try changing width to 94vw
-*/
-
-
     .riw-card-deck {
       position: relative;
       left: 1.25rem;
-      width: 99vw;
+      width: 170%;
     }
 
     .riw-footer-shift {
@@ -368,8 +354,14 @@
 
     .riw-dropdown {
       position: relative;
-      left: 12rem;
-      width: 70%;
+      left: 19rem;
+      width: 60%;
+      flex-wrap: nowrap !important;
+      gap: 4em;
+    }
+
+    .riw-product-container {
+      margin-left: 0 !important;
     }
 
     .riw-col {
@@ -381,7 +373,7 @@
       color: #fefefe;
       width: 22em;
       height: auto;
-      margin: 1rem 0;
+      margin: 1rem -6rem;
     }
 
     .dropdown-menu a.riw-dropdown-item {
@@ -442,11 +434,6 @@
       top: 12.25rem;
     }
 
-    .placemat-container a.event-link {
-      position: absolute;
-      padding-left: 0.75rem;
-      top: 15rem;
-    }
 
     /* Tapestry*/
     .tapestry-container {
@@ -473,12 +460,6 @@
       max-width: 100%;
       min-height: 10rem;
       object-fit: cover;
-    }
-
-    h3.tapestry-paragraph {
-      position: absolute;
-      padding-left: 0.75rem;
-      top: 10rem;
     }
 
     p.tapestry-paragraph {
@@ -515,6 +496,7 @@
 
     .riw-card {
       cursor: default;
+      width: 5em;
     }
 
     .riw-card-deck {
@@ -606,414 +588,89 @@
     }
 
 
-    @media only screen and (min-width: 768px) {
+    .placemat-container {
+      width: 50em;
+      height: 17rem;
+    }
 
-      .placemat-container {
-        width: 50em;
-        height: 17rem;
-      }
+    .placemat-container img {
+      max-width: 20rem;
+      min-height: 15rem;
+      padding: 0.25rem;
+      object-fit: cover;
+      left: 1rem;
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
+    }
 
-      .placemat-container img {
-        max-width: 20rem;
-        min-height: 15rem;
-        padding: 0.25rem;
-        object-fit: cover;
-        left: 1rem;
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-      }
+    .placemat-container h3 {
+      padding: 0 1rem;
+      margin: 1rem;
+      top: -0.75rem;
+      left: 21rem;
+    }
 
-      .placemat-container h3 {
-        padding: 0 1rem;
-        margin: 1rem;
-        top: -0.75rem;
-        left: 21rem;
-      }
+    .placemat-container p {
+      margin: 0 1rem;
+      padding: 1rem;
+      top: 5.5rem;
+      left: 21rem;
+    }
 
-      .placemat-container p {
-        margin: 0 1rem;
-        padding: 1rem;
-        top: 5.5rem;
-        left: 21rem;
-      }
+    .placemat-container a.event-link {
+      position: absolute;
+      padding: 0 1rem;
+      margin: 1rem;
+      top: 14rem;
+      left: 21rem;
+    }
 
-      .placemat-container a.event-link {
-        padding: 0 1rem;
-        margin: 1rem;
-        top: 13rem;
-        left: 21rem;
-      }
-
-      .tapestry-container {
-        width: 50em;
-        height: 20.5rem;
-
-      }
-
-      .tapestry-container img {
-        max-width: 20rem;
-        min-height: 15rem;
-        padding: 0.25rem;
-        object-fit: cover;
-        top: 3rem;
-        left: 1rem;
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-      }
-
-      h3.tapestry-paragraph {
-        padding: 0 1rem;
-        margin: 1rem;
-        top: 0.25rem;
-        left: 12em;
-      }
-
-      p.tapestry-paragraph {
-        margin: 0 1rem;
-        padding: 1rem;
-        left: 21rem;
-      }
-
-      p.tapestry-paragraph:nth-of-type(1) {
-        top: 2.75rem;
-      }
-
-      p.tapestry-paragraph:nth-of-type(2) {
-        top: 7.5rem;
-      }
-
-      p.tapestry-paragraph:nth-of-type(3) {
-        top: 10.75rem;
-      }
-
-      .tapestry-paragraph .event-link {
-        padding: 0 1rem;
-        margin: 1rem;
-        top: 6rem;
-        left: -1.2rem;
-      }
+    .tapestry-container {
+      width: 50em;
+      height: 20.5rem;
 
     }
 
-
-    @media only screen and (min-width: 992px) {
-
-      /* Tapestry*/
-
-
-      h3.tapestry-paragraph {
-        position: absolute;
-        padding-left: 0.75rem;
-      }
-
-      p.tapestry-paragraph {
-        position: absolute;
-        padding-left: 0.75rem;
-      }
-
-      .tapestry-paragraph .event-link {
-        position: absolute;
-        padding-left: 0.75rem;
-      }
-
-      .riw-course-cards {
-        margin-top: 0;
-
-      }
-
-      /* Course Cards on Landing Pages */
-
-      .riw-course-cards .riw-card-deck {
-        justify-content: center;
-      }
-
-      .riw-course-cards .riw-card {
-        margin-bottom: 1em;
-        min-width: 17rem;
-        max-width: 22rem;
-        border-color: #4E5B73;
-        border-width: 0.075rem;
-      }
-
-      .riw-course-cards .btn {
-        border-radius: 8px;
-      }
-
-      .riw-course-cards .riw-card-header {
-        color: #ffffff;
-        text-align: center;
-        background-color: #3F2A55;
-      }
-
-      .riw-course-cards .riw-card-body .riw-card-title {
-        text-align: center;
-      }
-
-      .riw-course-cards .riw-card-body {
-        color: #000;
-      }
-
-      .riw-course-cards .riw-card-body .fas {
-        color: #4E5B73;
-      }
-
-      .riw-course-cards .riw-card-footer .btn {
-        background-color: #3F2A55;
-        border-color: #3F2A55;
-      }
-
-      .riw-course-cards .riw-card-footer {
-        border-top-color: #ffffff;
-        background-color: #ffffff;
-      }
-
-      .riw-course-cards .riw-card-block {
-        display: contents;
-      }
-
-      .riw-course-cards .riw-card img {
-        height: 190px;
-      }
-
-      /* Jumbotron on landing pages */
-      .jumbotron {
-        padding-left: 1rem;
-        padding-right: 1rem;
-        margin-bottom: 1rem;
-        padding-bottom: 2rem;
-        padding-top: 2rem;
-      }
-
-      /* RIW styles */
-      .riw-jumbotron {
-        padding: 1rem;
-        margin: 0;
-      }
-
-      .riw-jumbotron p {
-        font-size: 12pt;
-      }
-
-      /* Carousel */
-      .carousel-item img {
-        border-radius: 0;
-        object-fit: cover;
-      }
-
-      .custom-nav .nav-link:visited {
-        color: #fefefe;
-      }
-
-      .custom-nav .nav-link:hover {
-        color: #fefefe;
-      }
-
-      a.riw-dropdown-item {
-        color: #00000091;
-      }
-
-      .carousel-item img {
-        width: 100%;
-        height: 28em;
-      }
-
-      .carousel-caption {
-        background-color: rgba(0, 0, 0, 0.6) !important;
-        border-radius: 1rem;
-      }
-
-      .carousel-control-prev,
-      .carousel-control-next {
-        background-color: transparent;
-        border-color: transparent;
-      }
-
-      .carousel-control-next-icon {
-        background-color: #000;
-        opacity: 0.6;
-        width: 3rem;
-        height: auto;
-        padding: 1rem;
-        margin: 3rem;
-        border-radius: 20rem;
-      }
-
-      .carousel-control-prev-icon {
-        background-color: #000;
-        opacity: 0.6;
-        width: 3rem;
-        height: auto;
-        padding: 1rem;
-        margin: 3rem;
-        border-radius: 20rem;
-      }
-
-      .riw-carousel-link a {
-        color: #fefefe;
-        text-decoration: underline;
-      }
-
-      .riw-carousel-link a:hover {
-        color: #e2e1e1;
-      }
-
-      /* our products section*/
-      .riw-btn {
-        background-color: #3F2A56;
-        color: #fefefe;
-        height: auto;
-      }
-
-      .riw-btn:hover {
-        background-color: #2e1f3f;
-        color: #b1b1b1;
-      }
-
-      .riw-btn:active {
-        background-color: #2e1f3f;
-        color: #b1b1b1;
-      }
-
-      a.riw-dropdown-item:hover {
-        background-color: #3F2A56;
-        color: #fefefe;
-      }
-
-      /* placemat */
-      .placemat-container {
-        min-width: 22em;
-        min-height: 19rem;
-        position: relative;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, 20%);
-        margin-bottom: 1rem;
-        border: 1px solid #000;
-        border-radius: 5px;
-        transition: 0.3s;
-      }
-
-      .placemat-container:hover {
-        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
-      }
-
-      .placemat-container img {
-        position: absolute;
-        width: 100%;
-        min-height: 10rem;
-        object-fit: cover;
-      }
-
-
-      .placemat-container h3 {
-        position: absolute;
-        padding-left: 0.75rem;
-        /* top: 10rem; */
-      }
-
-      .placemat-container p {
-        position: absolute;
-        padding-left: 0.75rem;
-        /* top: 12.25rem; */
-      }
-
-      .placemat-container a.event-link {
-        position: absolute;
-        padding-left: 0.75rem;
-        /* top: 15rem; */
-      }
-
-      /* Tapestry*/
-      .tapestry-container {
-        min-width: 22em;
-        min-height: 19rem;
-        position: relative;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, 20%);
-        border: 1px solid #000;
-        border-radius: 5px;
-        transition: 0.3s;
-      }
-
-      .tapestry-container:hover {
-        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
-      }
-
-      .tapestry-container img {
-        position: absolute;
-        width: 100%;
-        height: 10rem;
-        object-fit: cover;
-      }
-
-      h3.tapestry-paragraph {
-        position: absolute;
-        padding-left: 0.75rem;
-        /* top: 10rem; */
-      }
-
-      p.tapestry-paragraph {
-        position: absolute;
-        padding-left: 0.75rem;
-        /* top: 12.25rem; */
-      }
-
-      .tapestry-paragraph .event-link {
-        position: absolute;
-        padding-left: 0.75rem;
-        /* top: 15rem; */
-      }
-
-      /*cards*/
-
-      .riw-card {
-        cursor: default;
-      }
-
-      .riw-card-deck .riw-card {
-        flex: 100%;
-        margin: 2rem 1rem;
-      }
-
-      .riw-card-body a {
-        color: #000;
-        cursor: pointer;
-      }
-
-
-      .riw-card-time {
-        text-align: center;
-        font-size: 1em;
-        font-weight: 600;
-      }
-
-      a.event-link {
-        display: block;
-        text-decoration: underline;
-        color: #3F2A55;
-        margin-top: 0.75rem;
-      }
-
-      a.event-link:hover {
-        color: #00000091;
-      }
-
-      /* RIW footer */
-
-      .riw-footer {
-        display: flex;
-        flex-flow: column wrap;
-        justify-content: center;
-        align-items: center;
-      }
-
+    .tapestry-container img {
+      max-width: 20rem;
+      min-height: 15rem;
+      padding: 0.25rem;
+      object-fit: cover;
+      top: 3rem;
+      left: 1rem;
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
     }
 
-    @media only screen and (min-width: 1340px) {
+    h3.tapestry-paragraph {
+      position: absolute;
+      padding: 0 1rem;
+      margin: 1rem;
+      top: 0.25rem;
+      left: 13em;
+    }
 
-      /* Align h3 titles on bigger screens */
-      .titles-sm {
-        left: 30%;
-      }
+    p.tapestry-paragraph {
+      margin: 0 1rem;
+      padding: 1rem;
+      left: 21rem;
+    }
+
+    p.tapestry-paragraph:nth-of-type(1) {
+      top: 2.75rem;
+    }
+
+    p.tapestry-paragraph:nth-of-type(2) {
+      top: 6.75rem;
+    }
+
+    p.tapestry-paragraph:nth-of-type(3) {
+      top: 10.75rem;
+    }
+
+    .tapestry-paragraph .event-link {
+      padding: 0 1rem;
+      margin: 1rem;
+      top: 6rem;
+      left: -1.2rem;
     }
